--- a/css/common.css
+++ b/css/common.css
@@ -1,16 +1,74 @@
-* {margin: 0; padding: 0; box-sizing: border-box; font-size: 16px; font-family: '나눔고딕', '맑음고딕';}
-img{width: 100%;}
-video{width: 100%;}
-body{width: 100%; text-align: center;}
-ul, li, a {text-decoration: none;}
-
-
-/* .blind{display: none;} */
-
-
-
-
-@media screen and (max-width: 1980px) {
-
-
+@charset "UTF-8";
+@font-face {
+  font-family: 'NanumBarunGothic';
+  src: local(NanumBarunGothic);
+  src: url("../font/NanumBarunGothic.eot");
+  src: url("../font/NanumBarunGothic.woff") format("woff"), url("https://www.navercorp.com/font/NanumBarunGothic.otf") format("opentype");
 }
+
+@font-face {
+  font-family: 'NanumSquare-L';
+  src: local(NanumSquareOTFLight);
+  src: url("../font/NanumSquareOTFLight.eot");
+  src: url("../font/NanumSquareOTFLight.woff") format("woff"), url("../../font/NanumSquareOTFLight.otf") format("opentype");
+}
+
+@font-face {
+  font-family: 'NanumSquare';
+  src: local(NanumSquareOTFRegular);
+  src: url("../font/NanumSquareOTFRegular.eot");
+  src: url("../font/NanumSquareOTFRegular.woff") format("woff"), url("../../font/NanumSquareOTFRegular.otf") format("opentype");
+}
+
+@font-face {
+  font-family: 'NanumSquare-B';
+  src: local(NanumSquareOTFBold);
+  src: url("../font/NanumSquareOTFBold.eot");
+  src: url("../font/NanumSquareOTFBold.woff") format("woff"), url("../../font/NanumSquareOTFBold.otf") format("opentype");
+}
+
+@font-face {
+  font-family: 'NanumSquare-EB';
+  src: local(NanumSquareOTFExtraBold);
+  src: url("../font/NanumSquareOTFExtraBold.eot");
+  src: url("../font/NanumSquareOTFExtraBold.woff") format("woff"), url("../../font/NanumSquareOTFExtraBold.otf") format("opentype");
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body,
+html {
+  height: 100%;
+  font-style: normal;
+  line-height: 1.4;
+  -webkit-text-size-adjust: none;
+  min-width: 1200px;
+  
+}
+
+#wrap{
+  position: relative;
+  
+}
+
+header{
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 9999;
+  /* min-width: 1200px; */
+  background-color: rgb(255, 255, 255, 0.8);
+}
+
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #f8f9fa;
+  font-family: "NanumSquare", "나눔고딕", "돋움", "Dotum", sans-serif;
+}
+
+/** 공통 CSS **/
